// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ChipGroup /> selectionType="multiple" should render with selectionType="multiple" 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c4 {
  margin-bottom: 8px;
  margin-right: 8px;
}

.c5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c10 {
  border-color: hsla(216,19%,89%,1);
  border-style: solid;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-right: 12px;
  padding-left: 12px;
  height: 28px;
  background-color: transparent;
  border-radius: 9999px;
  border-width: 0.5px;
  border-color: hsla(216,19%,89%,1);
  border-style: solid;
}

.c11 {
  background-color: hsla(0,0%,100%,1);
  border-radius: 9999px;
  border-color: hsla(216,19%,89%,1);
  border-width: 1px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: left;
  text-overflow: ellipsis;
  max-width: 420px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-color: transparent;
}

.c13:hover {
  background-color: hsla(216,15%,54%,0.09);
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 2px;
  margin-bottom: 2px;
}

.c1 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: 0 -1px -1px 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  left: -10000px;
  white-space: nowrap;
  word-wrap: normal;
}

.c9 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: 0 -1px -1px 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  left: -10000px;
  white-space: nowrap;
  word-wrap: normal;
}

.c9:focus + div {
  outline: 1px solid hsla(220,30%,96%,1);
  box-shadow: 0px 0px 0px 4px hsla(218,89%,51%,0.18);
}

.c9:hover + div {
  border-color: hsla(214,18%,69%,1);
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 70ms;
  transition-duration: 70ms;
}

.c2 {
  color: hsla(217,56%,17%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
}

.c14 {
  color: hsla(216,27%,36%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
  overflow: hidden;
  display: -webkit-box;
  line-clamp: 1;
  -webkit-line-clamp: 1;
  -webkit-box-orient: vertical;
}

@media screen and (min-width:320px) {
  .c10 {
    border-style: solid;
  }
}

@media screen and (min-width:480px) {
  .c10 {
    border-style: solid;
  }
}

@media screen and (min-width:768px) {
  .c10 {
    border-style: solid;
  }
}

@media screen and (min-width:1024px) {
  .c10 {
    border-style: solid;
  }
}

@media screen and (min-width:1200px) {
  .c10 {
    border-style: solid;
  }
}

@media screen and (min-width:320px) {
  .c12 {
    border-style: solid;
  }
}

@media screen and (min-width:480px) {
  .c12 {
    border-style: solid;
  }
}

@media screen and (min-width:768px) {
  .c12 {
    border-style: solid;
  }
}

@media screen and (min-width:1024px) {
  .c12 {
    border-style: solid;
  }
}

@media screen and (min-width:1200px) {
  .c12 {
    border-style: solid;
  }
}

<div>
  <div
    class=""
    data-blade-component="base-box"
  >
    <div
      aria-labelledby="chip-group-83-label"
      class="c0"
      data-blade-component="chip-group"
      role="group"
    >
      <div
        class=""
        data-blade-component="base-box"
      >
        <div
          class="c1"
          data-blade-component="visually-hidden"
        >
          <p
            class="c2"
            data-blade-component="text"
          >
            Select fruits
          </p>
        </div>
        <div
          class="c3"
          data-blade-component="base-box"
        >
          <div
            class="c4"
            data-blade-component="base-box"
          >
            <div
              class="c5"
              data-blade-component="chip"
            >
              <label
                class="c6"
                data-blade-component="chip-label"
                style="cursor: pointer;"
              >
                <div
                  class="c7"
                  data-blade-component="base-box"
                >
                  <div
                    class="c8"
                    data-blade-component="base-box"
                  >
                    <input
                      aria-checked="false"
                      aria-disabled="false"
                      aria-invalid="false"
                      aria-required="false"
                      class="c9"
                      role="checkbox"
                      type="checkbox"
                      value="apple"
                    />
                    <div
                      class="c10 c11"
                      data-blade-component="base-box"
                    >
                      <div
                        class="c12 c13"
                        data-blade-component="base-box"
                      >
                        <p
                          class="c14"
                          data-blade-component="text"
                        >
                          Apple
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </label>
            </div>
          </div>
          <div
            class="c4"
            data-blade-component="base-box"
          >
            <div
              class="c5"
              data-blade-component="chip"
            >
              <label
                class="c6"
                data-blade-component="chip-label"
                style="cursor: pointer;"
              >
                <div
                  class="c7"
                  data-blade-component="base-box"
                >
                  <div
                    class="c8"
                    data-blade-component="base-box"
                  >
                    <input
                      aria-checked="false"
                      aria-disabled="false"
                      aria-invalid="false"
                      aria-required="false"
                      class="c9"
                      role="checkbox"
                      type="checkbox"
                      value="mango"
                    />
                    <div
                      class="c10 c11"
                      data-blade-component="base-box"
                    >
                      <div
                        class="c12 c13"
                        data-blade-component="base-box"
                      >
                        <p
                          class="c14"
                          data-blade-component="text"
                        >
                          Mango
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </label>
            </div>
          </div>
          <div
            class="c4"
            data-blade-component="base-box"
          >
            <div
              class="c5"
              data-blade-component="chip"
            >
              <label
                class="c6"
                data-blade-component="chip-label"
                style="cursor: pointer;"
              >
                <div
                  class="c7"
                  data-blade-component="base-box"
                >
                  <div
                    class="c8"
                    data-blade-component="base-box"
                  >
                    <input
                      aria-checked="false"
                      aria-disabled="false"
                      aria-invalid="false"
                      aria-required="false"
                      class="c9"
                      role="checkbox"
                      type="checkbox"
                      value="orange"
                    />
                    <div
                      class="c10 c11"
                      data-blade-component="base-box"
                    >
                      <div
                        class="c12 c13"
                        data-blade-component="base-box"
                      >
                        <p
                          class="c14"
                          data-blade-component="text"
                        >
                          Orange
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ChipGroup /> selectionType="single" should render with selectionType="single" 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c4 {
  margin-bottom: 8px;
  margin-right: 8px;
}

.c5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c10 {
  border-color: hsla(216,19%,89%,1);
  border-style: solid;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-right: 12px;
  padding-left: 12px;
  height: 28px;
  background-color: transparent;
  border-radius: 9999px;
  border-width: 0.5px;
  border-color: hsla(216,19%,89%,1);
  border-style: solid;
}

.c11 {
  background-color: hsla(0,0%,100%,1);
  border-radius: 9999px;
  border-color: hsla(216,19%,89%,1);
  border-width: 1px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: left;
  text-overflow: ellipsis;
  max-width: 420px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-color: transparent;
}

.c13:hover {
  background-color: hsla(216,15%,54%,0.09);
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 2px;
  margin-bottom: 2px;
}

.c1 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: 0 -1px -1px 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  left: -10000px;
  white-space: nowrap;
  word-wrap: normal;
}

.c9 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: 0 -1px -1px 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  left: -10000px;
  white-space: nowrap;
  word-wrap: normal;
}

.c9:focus + div {
  outline: 1px solid hsla(220,30%,96%,1);
  box-shadow: 0px 0px 0px 4px hsla(218,89%,51%,0.18);
}

.c9:hover + div {
  border-color: hsla(214,18%,69%,1);
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 70ms;
  transition-duration: 70ms;
}

.c2 {
  color: hsla(217,56%,17%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
}

.c14 {
  color: hsla(216,27%,36%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
  overflow: hidden;
  display: -webkit-box;
  line-clamp: 1;
  -webkit-line-clamp: 1;
  -webkit-box-orient: vertical;
}

@media screen and (min-width:320px) {
  .c10 {
    border-style: solid;
  }
}

@media screen and (min-width:480px) {
  .c10 {
    border-style: solid;
  }
}

@media screen and (min-width:768px) {
  .c10 {
    border-style: solid;
  }
}

@media screen and (min-width:1024px) {
  .c10 {
    border-style: solid;
  }
}

@media screen and (min-width:1200px) {
  .c10 {
    border-style: solid;
  }
}

@media screen and (min-width:320px) {
  .c12 {
    border-style: solid;
  }
}

@media screen and (min-width:480px) {
  .c12 {
    border-style: solid;
  }
}

@media screen and (min-width:768px) {
  .c12 {
    border-style: solid;
  }
}

@media screen and (min-width:1024px) {
  .c12 {
    border-style: solid;
  }
}

@media screen and (min-width:1200px) {
  .c12 {
    border-style: solid;
  }
}

<div>
  <div
    class=""
    data-blade-component="base-box"
  >
    <div
      aria-labelledby="chip-group-7-label"
      class="c0"
      data-blade-component="chip-group"
      role="radiogroup"
    >
      <div
        class=""
        data-blade-component="base-box"
      >
        <div
          class="c1"
          data-blade-component="visually-hidden"
        >
          <p
            class="c2"
            data-blade-component="text"
          >
            Select fruits
          </p>
        </div>
        <div
          class="c3"
          data-blade-component="base-box"
        >
          <div
            class="c4"
            data-blade-component="base-box"
          >
            <div
              class="c5"
              data-blade-component="chip"
            >
              <label
                class="c6"
                data-blade-component="chip-label"
                style="cursor: pointer;"
              >
                <div
                  class="c7"
                  data-blade-component="base-box"
                >
                  <div
                    class="c8"
                    data-blade-component="base-box"
                  >
                    <input
                      aria-checked="false"
                      aria-describedby="radio-1-helptext-2"
                      aria-disabled="false"
                      aria-invalid="false"
                      aria-required="false"
                      class="c9"
                      role="radio"
                      type="radio"
                      value="apple"
                    />
                    <div
                      class="c10 c11"
                      data-blade-component="base-box"
                    >
                      <div
                        class="c12 c13"
                        data-blade-component="base-box"
                      >
                        <p
                          class="c14"
                          data-blade-component="text"
                        >
                          Apple
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </label>
            </div>
          </div>
          <div
            class="c4"
            data-blade-component="base-box"
          >
            <div
              class="c5"
              data-blade-component="chip"
            >
              <label
                class="c6"
                data-blade-component="chip-label"
                style="cursor: pointer;"
              >
                <div
                  class="c7"
                  data-blade-component="base-box"
                >
                  <div
                    class="c8"
                    data-blade-component="base-box"
                  >
                    <input
                      aria-checked="false"
                      aria-describedby="radio-3-helptext-4"
                      aria-disabled="false"
                      aria-invalid="false"
                      aria-required="false"
                      class="c9"
                      role="radio"
                      type="radio"
                      value="mango"
                    />
                    <div
                      class="c10 c11"
                      data-blade-component="base-box"
                    >
                      <div
                        class="c12 c13"
                        data-blade-component="base-box"
                      >
                        <p
                          class="c14"
                          data-blade-component="text"
                        >
                          Mango
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </label>
            </div>
          </div>
          <div
            class="c4"
            data-blade-component="base-box"
          >
            <div
              class="c5"
              data-blade-component="chip"
            >
              <label
                class="c6"
                data-blade-component="chip-label"
                style="cursor: pointer;"
              >
                <div
                  class="c7"
                  data-blade-component="base-box"
                >
                  <div
                    class="c8"
                    data-blade-component="base-box"
                  >
                    <input
                      aria-checked="false"
                      aria-describedby="radio-5-helptext-6"
                      aria-disabled="false"
                      aria-invalid="false"
                      aria-required="false"
                      class="c9"
                      role="radio"
                      type="radio"
                      value="orange"
                    />
                    <div
                      class="c10 c11"
                      data-blade-component="base-box"
                    >
                      <div
                        class="c12 c13"
                        data-blade-component="base-box"
                      >
                        <p
                          class="c14"
                          data-blade-component="text"
                        >
                          Orange
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
